Added max_size to columns which will incrated by order of 2

--- a/c/knn/Makefile
+++ b/c/knn/Makefile
@@ -1,17 +1,18 @@
 C=gcc
 CFLAGS=-g -Wall
+LIBS=-lm
 
 OBJS=knn.o csv.o
 
 all: knn
 
 knn: $(OBJS)
-	$(C) $(CFLAGS) $(DEFS) -o $@ $(OBJS)
+	$(C) $(CFLAGS) $(LIBS) $(DEFS) -o $@ $(OBJS)
 
 knn.o: knn.c csv.h
-	$(C) $(CFLAGS) $(DEFS) -o $@ -c knn.c
+	$(C) $(CFLAGS) $(LIBS) $(DEFS) -o $@ -c knn.c
 csv.o: csv.c csv.h
-	$(C) $(CFLAGS) $(DEFS) -o $@ -c csv.c
+	$(C) $(CFLAGS) $(LIBS) $(DEFS) -o $@ -c csv.c
 
 clean:
 	rm -f *.o knn
