--- a/c/game_of_life/Makefile
+++ b/c/game_of_life/Makefile
@@ -1,4 +1,4 @@
-LIBS=-D_DEFAULT_SOURCE -D_XOPEN_SOURCE=600 -lncursesw 
+LIBS=-D_DEFAULT_SOURCE -D_XOPEN_SOURCE=600 -lncursesw  -Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now 
 hellomake: main.c 
 	gcc $(LIBS) main.c -o out
 
